crates/tuna/tests/parser/fail/local-name-collision.som
"test:
fail-message:
  - contains: foo
  - contains: defined twice
"

LocalNameCollision = (
  run = (
    |a foo b c foo d|
    42.
  )
)
